--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Oto Kurtarma</title>
+    <title>Yenice Oto Kurtarma</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
