--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <meta
+      name="description"
+      content="oto kurtarma"
+    />
+    <meta name="keywords" content="oto, kurtarma, inegöl, bursa, çekici, yolyardim, acil">
+    <meta name="author" content="yeniceotokurtarma">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -25,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
+    <meta name="google-site-verification" content="IzXYFhYWdNGm21ECTB-3uYCD-15tszLLSdobcnpSJQE" />
     <title>Yenice Oto Kurtarma</title>
   </head>
   <body>
