--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     -->
     <meta
       name="description"
-      content="oto kurtarma"
+      content="yenice oto kurtarma"
     />
-    <meta name="keywords" content="oto, kurtarma, inegöl, bursa, çekici, yolyardim, acil">
-    <meta name="author" content="yeniceotokurtarma">
+    <meta name="keywords" content="yenice oto kurtarma, inegöl oto kurtarma, oto, kurtarma, inegöl, bursa, çekici, yolyardim, acil">
+    <meta name="author" content="yenice oto kurtarma">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
