--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <meta name="google-site-verification" content="IzXYFhYWdNGm21ECTB-3uYCD-15tszLLSdobcnpSJQE" />
-    <title>yenice oto kurtarma</title>
+    <title>Yenice-İnegöl Oto Kurtarma - 0533-344-86-50</title>
   </head>
   <body>
     <noscript></noscript>
